[package]
name = "bevy-breakout"
version = "0.1.0"
edition = "2021"
repository="https://github.com/Dhruvesh08/bevy-breakout"
homepage="https://github.com/Dhruvesh08/bevy-breakout"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.11.0" , features=["wayland"]}

